# sen

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  configure.bat  env.cmd  format.py  meson.build  project.4coder  run.bat  test.bat
example/: basic.sen
scripts/: build.bat  clean.bat  configure.bat  fmt.bat  fmt.py  format.bat  run.bat
src/: Common.cc  Common.h  Common.hh  Lexer.cc  Lexer.cpp  Lexer.h  Lexer.hh  Main.cc  Main.cpp  Terminal.cc  Terminal.cpp  Terminal.h  Token.cc  Token.h  Token.hh  common.h  intern.cc  intern.h  lexer.cc  lexer.cpp  lexer.h  main.cc  main.cpp  meson.build  ps.cc  ps.h  ps.hh  token.cpp  token.h  utils.h
test/: Test_Lexer.cc  Test_Lexer.cpp  Test_Lexer.sen  meson.build
